Change pushgateway target to localhost

--- a/APIs/apis.conf
+++ b/APIs/apis.conf
@@ -8,5 +8,5 @@ creds_file = /secure/path/github_creds.txt
 labels = productization-issue,DISA RHEL9 STIG Alignment
 
 [prometheus]
-push_target = pushgateway:9091
+push_target = localhost:9091
 push_job = ComplianceAsCode
