--- a/Stack/docker-compose.yaml
+++ b/Stack/docker-compose.yaml
@@ -4,14 +4,19 @@ services:
   prometheus:
     image: prom/prometheus:latest
     volumes:
-      - ./prometheus/conf/:/etc/prometheus/
-      - ./prometheus/data/:/prometheus/
+      - ./prometheus/conf/:/etc/prometheus/:Z
+      - ./prometheus/data/:/prometheus/:Z
+    #securityContext:
+    #  fsGroup: 65534
+    #  runAsGroup: 65534
+    #  runAsNonRoot: true
+    #  runAsUser: 65534
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       #- '--web.console.libraries=/etc/prometheus/console_libraries'
       #- '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention=200h'
+      - '--storage.tsdb.retention=365d'
       - '--web.enable-lifecycle'
     expose:
       - 9090
@@ -35,8 +40,8 @@ services:
     ports:
       - 3000:3000
     volumes:
-        - ./gfn_env/provisioning:/etc/grafana/provisioning
-        - ./gfn_env/dashboards:/var/lib/grafana/dashboards
+        - ./gfn_env/provisioning:/etc/grafana/provisioning:Z
+        - ./gfn_env/dashboards:/var/lib/grafana/dashboards:Z
     env_file:
     - .env_grafana
     secrets:
