--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Customizable files
+APIs/apis.yml
+Stack/.env_grafana
+Stack/.GRAFANA_ADMIN_PASSWORD
