Include support for persistent logs in Grafana
It might be necessary to persist the Grafana logs for auditing purposes.
The settings and documentation to do so are supporting this now.

--- a/Stack/docker-compose.yaml
+++ b/Stack/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
     volumes:
         - ./gfn_env/provisioning:/etc/grafana/provisioning:Z
         - ./gfn_env/dashboards:/var/lib/grafana/dashboards:Z
+        - ./logs/grafana/:/var/log/grafana:Z
     env_file:
     - .env_grafana
     secrets:
