Introduce functions to get workflows information
It was introduced new functions to get information about GitHub
Workflows. The new functions permits to collect general information
about all workflows runs with the desired statuses. Another capability
is to collect information about the last run of a specific workflow.

--- a/Sample_Files/apis_apis.yml
+++ b/Sample_Files/apis_apis.yml
@@ -36,6 +36,24 @@ github:
     no_activity_limit: 15
     team:
       - marcusburghardt
+    workflows:
+      names:
+        - 'Github Pages'
+      status:
+        - action_required
+        - completed
+        - cancelled
+        - failure
+        - in_progress
+        - neutral
+        - pending
+        - queued
+        - requested
+        - skipped
+        - stale
+        - success
+        - timed_out
+        - waiting
 
 prometheus:
   push_target: localhost:9091
