--- a/Stack/docker-compose.yaml
+++ b/Stack/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - '--storage.tsdb.path=/prometheus'
       #- '--web.console.libraries=/etc/prometheus/console_libraries'
       #- '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention=365d'
+      - '--storage.tsdb.retention=5y'
       - '--web.enable-lifecycle'
     expose:
       - 9090
