--- a/Stack/prometheus/conf/prometheus.yml
+++ b/Stack/prometheus/conf/prometheus.yml
@@ -19,3 +19,10 @@ scrape_configs:
     scrape_interval: 15m
     static_configs:
       - targets: ['pushgateway:9091']
+
+  - job_name: 'ComplianceAsCode_Policies'
+    scrape_interval: 15m
+    scheme: https
+    metrics_path: '/content-pages/prometheus_stats/policies_metrics'
+    static_configs:
+      - targets: ['complianceascode.github.io']
