Prometheus settings clean-up

--- a/Stack/prometheus/conf/prometheus.yml
+++ b/Stack/prometheus/conf/prometheus.yml
@@ -1,20 +1,13 @@
 global:
-  scrape_interval:     30m
+  scrape_interval:     15m
+  scrape_timeout:      1m
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
     monitor: 'community-mon'
 
-#rule_files:
-#  - 'prometheus.rules.yml'
-
 scrape_configs:
-  #- job_name: 'prometheus'
-  #  scrape_interval: 30s
-  #  static_configs:
-  #    - targets: ['prometheus:9090']
-
   - job_name: 'CommunityMon'
     scrape_interval: 15m
     static_configs:
