Include parameter to enable Admin API
It is commented for now. I still have some tests to decide the pros and
cons of enabling it by default.

--- a/Stack/docker-compose.yaml
+++ b/Stack/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       #- '--web.console.templates=/etc/prometheus/consoles'
       - '--storage.tsdb.retention=5y'
       - '--web.enable-lifecycle'
+      #- '--web.enable-admin-api'
     expose:
       - 9090
     ports:
